-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.2
-
None
-
-
df80d5aea294f2c1427fdc0b4333aa425178cb79 (qt/qtmultimedia/dev)
-
2021wk46POAndroid&Mobile, 2021wk48POAndroid&Mobile
Steps to reproduce:
1. Run recorder example on Android device
2. Play record button
Actual:
Grey rectangle can be observed
Expected:
No grey elements are present
- resulted from
-
QTBUG-93460 Test Android Examples
-
- Closed
-
For Gerrit Dashboard: QTBUG-96946 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
384088,11 | Android: Fix for the preview screen size issue on the Recorder example | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
385603,2 | Android: Fix for the preview screen size issue on the Recorder example | 6.2 | qt/qtmultimedia | Status: MERGED | +2 | 0 |