Android: Fix for the preview screen size issue on the Recorder example

After the fix, the preview screen size in Android will be set to the same size as the default screen size in recoreder mode.

Fixes: QTBUG-96946
Change-Id: I2fa6b4cd154b9fba905837ae731af1a67fb24af4
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit df80d5aea294f2c1427fdc0b4333aa425178cb79)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>